examples/test/testpolicy10875.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10875
  namespace: namespace448
spec:
  podSelector:
    matchLabels:
      key47: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value24
          key24: value22
      podSelector:
        matchLabels:
          key34: value16
          key9: value41
